src/sjtu/LexicalAnalyse/NassauToken.java
/* Generated By:JJTree&JavaCC: Do not edit this line. NassauToken.java */
/** An Arithmetic Grammar. */

package sjtu.LexicalAnalyse;

public class NassauToken/*@bgen(jjtree)*/implements NassauTokenTreeConstants, NassauTokenConstants {/*@bgen(jjtree)*/
  protected static JJTNassauTokenState jjtree = new JJTNassauTokenState();/** Main entry point. */
        public static void main(String args[]) {
                System.out.println("Reading from standard input...");
                NassauToken t = new NassauToken(System.in);
                try {
                        ASTStart n = t.Start();
                        n.dump();
                        System.out.println("Thank you.");
                } catch (Exception e) {
                        System.out.println("Oops.");
                        System.out.println(e.getMessage());
                        e.printStackTrace();
                }
        }

  static final public ASTStart Start() throws ParseException {
                           /*@bgen(jjtree) Start */
  ASTStart jjtn000 = new ASTStart(JJTSTART);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case BOOLEAN:
        case BREAK:
        case BYTE:
        case CHAR:
        case CLASS:
        case CONST:
        case CONTINUE:
        case DO:
        case DOUBLE:
        case ELSE:
        case ELIF:
        case FALSE:
        case FLOAT:
        case FOR:
        case IF:
        case IMPLEMENT:
        case IMPORT:
        case INT:
        case LONG:
        case NEW:
        case NULL:
        case PACKAGE:
        case PRIVATE:
        case PUBLIC:
        case RETURN:
        case SHORT:
        case STATIC:
        case THIS:
        case TRUE:
        case VOID:
        case WHILE:
        case INTEGER_LITERAL:
        case FLOATING_POINT_LITERAL:
        case CHARACTER_LITERAL:
        case STRING_LITERAL:
        case IDENTIFIER:
        case LPAREN:
        case RPAREN:
        case LBRACE:
        case RBRACE:
        case LBRACKET:
        case RBRACKET:
        case SEMICOLON:
        case COMMA:
        case DOT:
        case ASSIGN:
        case GT:
        case LT:
        case BANG:
        case TILDE:
        case HOOK:
        case COLON:
        case EQ:
        case LE:
        case GE:
        case NE:
        case SC_OR:
        case SC_AND:
        case INCR:
        case DECR:
        case PLUS:
        case MINUS:
        case STAR:
        case SLASH:
        case BIT_AND:
        case BIT_OR:
        case XOR:
        case REM:
        case LSHIFT:
        case RSIGNEDSHIFT:
        case RUNSIGNEDSHIFT:
        case PLUSASSIGN:
        case MINUSASSIGN:
        case STARASSIGN:
        case SLASHASSIGN:
        case ANDASSIGN:
        case ORASSIGN:
        case XORASSIGN:
        case REMASSIGN:
        case LSHIFTASSIGN:
        case RSIGNEDSHIFTASSIGN:
        case RUNSIGNEDSHIFTASSIGN:
        case 96:
        case 97:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        TokenUnit();
      }
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
          {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void TokenUnit() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BOOLEAN:
      BOOLEAN();
      break;
    case BREAK:
      BREAK();
      break;
    case BYTE:
      BYTE();
      break;
    case CHAR:
      CHAR();
      break;
    case CLASS:
      CLASS();
      break;
    case CONST:
      CONST();
      break;
    case CONTINUE:
      CONTINUE();
      break;
    case DO:
      DO();
      break;
    case DOUBLE:
      DOUBLE();
      break;
    case ELSE:
      ELSE();
      break;
    case ELIF:
      ELIF();
      break;
    case FALSE:
      FALSE();
      break;
    case FLOAT:
      FLOAT();
      break;
    case FOR:
      FOR();
      break;
    case IF:
      IF();
      break;
    case IMPLEMENT:
      IMPLEMENT();
      break;
    case IMPORT:
      IMPORT();
      break;
    case INT:
      INT();
      break;
    case LONG:
      LONG();
      break;
    case NEW:
      NEW();
      break;
    case NULL:
      NULL();
      break;
    case PACKAGE:
      PACKAGE();
      break;
    case PRIVATE:
      PRIVATE();
      break;
    case PUBLIC:
      PUBLIC();
      break;
    case RETURN:
      RETURN();
      break;
    case SHORT:
      SHORT();
      break;
    case STATIC:
      STATIC();
      break;
    case THIS:
      THIS();
      break;
    case TRUE:
      TRUE();
      break;
    case VOID:
      VOID();
      break;
    case WHILE:
      WHILE();
      break;
    case INTEGER_LITERAL:
      INTEGER_LITERAL();
      break;
    case FLOATING_POINT_LITERAL:
      FLOATING_POINT_LITERAL();
      break;
    case CHARACTER_LITERAL:
      CHARACTER_LITERAL();
      break;
    case STRING_LITERAL:
      STRING_LITERAL();
      break;
    case IDENTIFIER:
      IDENTIFIER();
      break;
    case LPAREN:
      LPAREN();
      break;
    case RPAREN:
      RPAREN();
      break;
    case LBRACE:
      LBRACE();
      break;
    case RBRACE:
      RBRACE();
      break;
    case LBRACKET:
      LBRACKET();
      break;
    case RBRACKET:
      RBRACKET();
      break;
    case SEMICOLON:
      SEMICOLON();
      break;
    case COMMA:
      COMMA();
      break;
    case DOT:
      DOT();
      break;
    case ASSIGN:
      ASSIGN();
      break;
    case GT:
      GT();
      break;
    case LT:
      LT();
      break;
    case BANG:
      BANG();
      break;
    case TILDE:
      TILDE();
      break;
    case HOOK:
      HOOK();
      break;
    case COLON:
      COLON();
      break;
    case EQ:
      EQ();
      break;
    case LE:
      LE();
      break;
    case GE:
      GE();
      break;
    case NE:
      NE();
      break;
    case SC_OR:
      SC_OR();
      break;
    case SC_AND:
      SC_AND();
      break;
    case INCR:
      INCR();
      break;
    case DECR:
      DECR();
      break;
    case PLUS:
      PLUS();
      break;
    case MINUS:
      MINUS();
      break;
    case STAR:
      STAR();
      break;
    case SLASH:
      SLASH();
      break;
    case BIT_AND:
      BIT_AND();
      break;
    case BIT_OR:
      BIT_OR();
      break;
    case XOR:
      XOR();
      break;
    case REM:
      REM();
      break;
    case LSHIFT:
      LSHIFT();
      break;
    case RSIGNEDSHIFT:
      RSIGNEDSHIFT();
      break;
    case RUNSIGNEDSHIFT:
      RUNSIGNEDSHIFT();
      break;
    case PLUSASSIGN:
      PLUSASSIGN();
      break;
    case MINUSASSIGN:
      MINUSASSIGN();
      break;
    case STARASSIGN:
      STARASSIGN();
      break;
    case SLASHASSIGN:
      SLASHASSIGN();
      break;
    case ANDASSIGN:
      ANDASSIGN();
      break;
    case ORASSIGN:
      ORASSIGN();
      break;
    case XORASSIGN:
      XORASSIGN();
      break;
    case REMASSIGN:
      REMASSIGN();
      break;
    case LSHIFTASSIGN:
      LSHIFTASSIGN();
      break;
    case RSIGNEDSHIFTASSIGN:
      RSIGNEDSHIFTASSIGN();
      break;
    case RUNSIGNEDSHIFTASSIGN:
      RUNSIGNEDSHIFTASSIGN();
      break;
    case 96:
      ENTER();
      break;
    case 97:
      TAB();
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void BOOLEAN() throws ParseException {
                  /*@bgen(jjtree) BOOLEAN */
  ASTBOOLEAN jjtn000 = new ASTBOOLEAN(JJTBOOLEAN);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(BOOLEAN);
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void BREAK() throws ParseException {
                /*@bgen(jjtree) BREAK */
  ASTBREAK jjtn000 = new ASTBREAK(JJTBREAK);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(BREAK);
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void BYTE() throws ParseException {
               /*@bgen(jjtree) BYTE */
  ASTBYTE jjtn000 = new ASTBYTE(JJTBYTE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(BYTE);
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void CHAR() throws ParseException {
               /*@bgen(jjtree) CHAR */
  ASTCHAR jjtn000 = new ASTCHAR(JJTCHAR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(CHAR);
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void CLASS() throws ParseException {
                /*@bgen(jjtree) CLASS */
  ASTCLASS jjtn000 = new ASTCLASS(JJTCLASS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(CLASS);
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void CONST() throws ParseException {
                /*@bgen(jjtree) CONST */
  ASTCONST jjtn000 = new ASTCONST(JJTCONST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(CONST);
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void CONTINUE() throws ParseException {
                   /*@bgen(jjtree) CONTINUE */
  ASTCONTINUE jjtn000 = new ASTCONTINUE(JJTCONTINUE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(CONTINUE);
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void DO() throws ParseException {
             /*@bgen(jjtree) DO */
  ASTDO jjtn000 = new ASTDO(JJTDO);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(DO);
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void DOUBLE() throws ParseException {
                 /*@bgen(jjtree) DOUBLE */
  ASTDOUBLE jjtn000 = new ASTDOUBLE(JJTDOUBLE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(DOUBLE);
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void ELSE() throws ParseException {
               /*@bgen(jjtree) ELSE */
  ASTELSE jjtn000 = new ASTELSE(JJTELSE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(ELSE);
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void ELIF() throws ParseException {
               /*@bgen(jjtree) ELIF */
  ASTELIF jjtn000 = new ASTELIF(JJTELIF);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(ELIF);
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void FALSE() throws ParseException {
                /*@bgen(jjtree) FALSE */
  ASTFALSE jjtn000 = new ASTFALSE(JJTFALSE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(FALSE);
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void FLOAT() throws ParseException {
                /*@bgen(jjtree) FLOAT */
  ASTFLOAT jjtn000 = new ASTFLOAT(JJTFLOAT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(FLOAT);
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void FOR() throws ParseException {
              /*@bgen(jjtree) FOR */
  ASTFOR jjtn000 = new ASTFOR(JJTFOR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(FOR);
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void IF() throws ParseException {
             /*@bgen(jjtree) IF */
  ASTIF jjtn000 = new ASTIF(JJTIF);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(IF);
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void IMPLEMENT() throws ParseException {
                    /*@bgen(jjtree) IMPLEMENT */
  ASTIMPLEMENT jjtn000 = new ASTIMPLEMENT(JJTIMPLEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(IMPLEMENT);
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void IMPORT() throws ParseException {
                 /*@bgen(jjtree) IMPORT */
  ASTIMPORT jjtn000 = new ASTIMPORT(JJTIMPORT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(IMPORT);
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void INT() throws ParseException {
              /*@bgen(jjtree) INT */
  ASTINT jjtn000 = new ASTINT(JJTINT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(INT);
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void LONG() throws ParseException {
               /*@bgen(jjtree) LONG */
  ASTLONG jjtn000 = new ASTLONG(JJTLONG);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(LONG);
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void NEW() throws ParseException {
              /*@bgen(jjtree) NEW */
  ASTNEW jjtn000 = new ASTNEW(JJTNEW);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(NEW);
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void NULL() throws ParseException {
               /*@bgen(jjtree) NULL */
  ASTNULL jjtn000 = new ASTNULL(JJTNULL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(NULL);
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void PACKAGE() throws ParseException {
                  /*@bgen(jjtree) PACKAGE */
  ASTPACKAGE jjtn000 = new ASTPACKAGE(JJTPACKAGE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(PACKAGE);
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void PRIVATE() throws ParseException {
                  /*@bgen(jjtree) PRIVATE */
  ASTPRIVATE jjtn000 = new ASTPRIVATE(JJTPRIVATE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(PRIVATE);
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void PUBLIC() throws ParseException {
                 /*@bgen(jjtree) PUBLIC */
  ASTPUBLIC jjtn000 = new ASTPUBLIC(JJTPUBLIC);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(PUBLIC);
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void RETURN() throws ParseException {
                 /*@bgen(jjtree) RETURN */
  ASTRETURN jjtn000 = new ASTRETURN(JJTRETURN);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(RETURN);
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void SHORT() throws ParseException {
                /*@bgen(jjtree) SHORT */
  ASTSHORT jjtn000 = new ASTSHORT(JJTSHORT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(SHORT);
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void STATIC() throws ParseException {
                 /*@bgen(jjtree) STATIC */
  ASTSTATIC jjtn000 = new ASTSTATIC(JJTSTATIC);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(STATIC);
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void THIS() throws ParseException {
               /*@bgen(jjtree) THIS */
  ASTTHIS jjtn000 = new ASTTHIS(JJTTHIS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(THIS);
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }
